Basic image draw

--- a/meson.build
+++ b/meson.build
@@ -26,6 +26,7 @@ executable(
   'main.c',
   'window.c',
   'fonts/chakra_petch_80.c',
+  'boxart/ghostrunner.c',
   shaders,
   dependencies: [
     protocols,
