--- a/meson.build
+++ b/meson.build
@@ -31,6 +31,7 @@ executable(
   'commands.c',
   'log.c',
   'gamepad.c',
+  'menu.c',
   'fonts/chakra_petch_80_msdf.c',
   shaders,
   dependencies: [
