--- a/meson.build
+++ b/meson.build
@@ -32,6 +32,7 @@ executable(
   'log.c',
   'gamepad.c',
   'menu.c',
+  'signals.c',
   'fonts/chakra_petch_80_msdf.c',
   shaders,
   dependencies: [
