Draw a simple DOS-like bitmap font with point sampling

--- a/meson.build
+++ b/meson.build
@@ -33,7 +33,7 @@ executable(
   'gamepad.c',
   'menu.c',
   'signals.c',
-  'fonts/chakra.c',
+  'fonts/dos.c',
   shaders,
   dependencies: [
     math,
