Add gfx_draw_rect with rect_program

--- a/shaders/meson.build
+++ b/shaders/meson.build
@@ -8,4 +8,6 @@ parser = generator(
 shaders = parser.process(
   'text_frag.glsl',
   'text_vert.glsl',
+  'rect_frag.glsl',
+  'rect_vert.glsl',
 )
